bad/incr_new_array_bool.example_compiler_output
ERROR
[1mbad/incr_new_array_bool.lat:4:18: [1;31merror: [0;1mexpression is not assignable[m
	(new boolean[3])++;
	                [1;32m^[m
[1mbad/incr_new_array_bool.lat:4:2: [1;34mnote: [0;1mexpression starts here[m
	(new boolean[3])++;
	[1;32m^[m
